apply plugin: 'java'
apply plugin: 'me.tatarka.retrolambda'

dependencies {
    compile fileTree(include: ['*.jar'], dir: 'libs')

    compile project(':iothub-java-common')

    // From https://github.com/Azure/azure-iot-sdks/blob/master/java/device/iothub-java-client/pom.xml
    compile 'org.apache.qpid:proton-j:0.11.1'
    //compile project(':qpid-proton')
    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
    //compile project(':paho-mqtt-java-mqttv3')
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

retrolambda {
    jdk JAVA8_HOME
    oldJdk JAVA7_HOME
    javaVersion JavaVersion.VERSION_1_7
    //jvmArgs '-noverify'
    //defaultMethods true
}
